# workchain

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  SPEC.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: add-step.md  new-workflow.md  test.md
.claude/features/: audit-backpressure.md  check-return-validation.md  concurrent-claim-tests.md  enforce-pollhint-return.md  engine-context-manager.md  fix-examples-audit-logger.md  heartbeat-cancel-await.md  mongodb-operation-timeouts.md  poll-policy-validation.md  readme-documentation.md  shutdown-active-work-test.md  step-dependencies.md  typed-result-block-step.md  typed-result-complete-step.md  typed-result-fail-step.md  update-store-docs.md
.claude/features/completed/: 26-typed-result-complete-step.md  27-typed-result-fail-step.md  28-typed-result-block-step.md  29-update-store-docs.md  30-readme-documentation.md  31-fix-examples-audit-logger.md  32-replace-prints-with-logging.md  33-poll-policy-validation.md  35-enforce-pollhint-return.md  36-mongodb-operation-timeouts.md  37-engine-context-manager.md  43-step-dependencies.md  44-audit-backpressure.md  45-concurrent-claim-tests.md  46-heartbeat-cancel-await.md  47-shutdown-active-work-test.md
.claude/skills/feature/: SKILL.md
.claude/skills/feature-workflow/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: dependency-review.yml
examples/: __init__.py  app.py  flow_diagram.html  generate_diagrams.py
examples/ci_cd_pipeline/: README.md  __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/customer_onboarding/: README.md  __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/data_pipeline_etl/: README.md  __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/document_approval/: README.md  __init__.py  example.py  steps.py
examples/incident_response/: README.md  __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/infra_provisioning/: README.md  __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/media_processing/: __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/ml_training/: __init__.py  example.py  flow_diagram.html  steps.py  workflow.py
examples/order_fulfillment/: __init__.py  example.py  steps.py  workflow.py
examples/order_fulfilment/: __init__.py  __main__.py  app.py  config.py  demo.py  logging_config.py  routes.py  schemas.py  workflow.py
examples/order_fulfilment/steps/: __init__.py  charge.py  confirm.py  reserve.py  ship.py  validate.py
examples/vault_provisioning/: example.py  steps.py
tests/: conftest.py  test_audit.py  test_audit_report.py  test_context.py  test_contrib_fastapi.py  test_decorators.py  test_designer_router.py  test_engine.py  test_exceptions.py  test_introspection.py  test_models.py  test_mongo_store.py  test_retry.py  test_runner.py  test_steps.py  test_store.py  test_store_mongo.py  test_templates.py  test_watcher.py  test_workflow.py
workchain/: __init__.py  audit.py  audit_report.py  context.py  decorators.py  engine.py  example.py  exceptions.py  introspection.py  models.py  requirements.txt  retry.py  runner.py  steps.py  store.py  templates.py  watcher.py  workflow.py
workchain/contrib/: fastapi.py
workchain/store/: __init__.py  base.py  mongo.py
workchain_server/: __init__.py  app.py  config.py  designer_router.py  example_templates.py  plugins.py  ui.py
workchain_server/frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
workchain_server/frontend/src/: App.tsx  main.tsx  styles.css
workchain_server/frontend/src/api/: client.ts  types.ts
workchain_server/frontend/src/components/: ActivityFeed.tsx  AnchorNode.tsx  AppShell.tsx  BlockNode.tsx  ConfigPanel.tsx  DependencyGraph.tsx  DesignerCanvas.tsx  DetailHeader.tsx  EventTimeline.tsx  HandlerPalette.tsx  JsonPanel.tsx  Pagination.tsx  StatsRow.tsx  StatusBreakdown.tsx  StepCard.tsx  StepNode.tsx  TemplateCatalog.tsx  TemplateLaunchModal.tsx  Toolbar.tsx  WorkflowFilters.tsx  WorkflowTable.tsx
workchain_server/frontend/src/hooks/: useAnalytics.ts  useHandlers.ts  useServerConfig.ts  useStats.ts  useTemplates.ts  useWorkflowSearch.ts  useWorkflows.ts
workchain_server/frontend/src/lib/: autoLayout.ts  draftValidate.ts  graphToDraft.ts  templateToGraph.ts
workchain_server/frontend/src/pages/: DashboardPage.tsx  DesignerPage.tsx  LandingPage.tsx  WorkflowDetailPage.tsx  WorkflowsPage.tsx
