[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workchain"
version = "0.1.0"
description = "Programmatic construction and execution of persistent, multi-step workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "motor>=3.0",
    "pydantic>=2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.20",
]
fastapi = [
    "fastapi>=0.110",
]
examples = [
    "workchain[fastapi]",
    "uvicorn>=0.34",
    "mongomock-motor>=0.0.20",
]

[tool.hatch.envs.harness]
description = "FastAPI test harness for example workflows"
extra-dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.34",
    "mongomock-motor>=0.0.20",
]

[tool.hatch.envs.harness.scripts]
serve = "uvicorn examples.app:app --reload --host 0.0.0.0 --port 8000"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.20",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
    "TRY003",   # inline exception messages are fine for a small library
    "EM101",    # string literal in exception — same rationale
    "EM102",    # f-string in exception — same rationale
    "TCH001",   # TYPE_CHECKING imports — not worth the churn
    "TCH002",   # TYPE_CHECKING imports (third-party)
    "N817",     # CamelCase imported as acronym — local alias is clear
    "BLE001",   # broad except in runner is intentional for step safety
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG002",   # unused args in step stubs match interface signatures
    "SLF001",   # private member access is expected in tests
    "S101",     # assert is standard in tests
    "FBT002",   # boolean positional args in test helpers are fine
    "PLR2004",  # magic values in assertions are fine
]
"examples/*" = [
    "T201",     # print() is the intended output mechanism in examples
    "SLF001",   # private member access needed to drive runner internals in demo
    "ARG002",   # unused args match interface signatures
    "PLR2004",  # magic values in display formatting are fine
]

[tool.hatch.build.targets.wheel]
packages = ["workchain"]
