[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workchain"
version = "0.1.0"
description = "Programmatic construction and execution of persistent, multi-step workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "motor>=3.0",
    "pydantic>=2.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.20",
]
fastapi = [
    "fastapi>=0.110",
]
server = [
    "workchain[fastapi]",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
]
examples = [
    "workchain[fastapi]",
    "uvicorn>=0.34",
    "mongomock-motor>=0.0.20",
]

[tool.hatch.envs.harness]
description = "FastAPI test harness for example workflows"
extra-dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.34",
    "mongomock-motor>=0.0.20",
]

[tool.hatch.envs.harness.scripts]
serve = "uvicorn examples.app:app --reload --host 0.0.0.0 --port 8100"

[tool.hatch.envs.server]
description = "Workchain server (standalone deployment)"
extra-dependencies = [
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
]

[tool.hatch.envs.server.env-vars]
WORKCHAIN_PLUGINS = "examples.customer_onboarding.steps,examples.ci_cd_pipeline.steps,examples.data_pipeline_etl.steps,examples.incident_response.steps,examples.infra_provisioning.steps,examples.media_processing.steps,examples.ml_training.steps,examples.order_fulfillment.steps"

[tool.hatch.envs.server.scripts]
serve = "uvicorn workchain_server.app:app --reload --host 0.0.0.0 --port 8000"

[tool.hatch.envs.frontend]
description = "Build the workflow designer SPA (requires Node 20+)"
detached = true

[tool.hatch.envs.frontend.scripts]
install = "npm --prefix workchain_server/frontend install"
build = "npm --prefix workchain_server/frontend run build"
dev = "npm --prefix workchain_server/frontend run dev"
typecheck = "npm --prefix workchain_server/frontend run typecheck"

[tool.hatch.envs.hatch-test]
extra-dependencies = [
    "pytest-asyncio>=0.23",
    "mongomock-motor>=0.0.20",
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
ignore = [
    "TRY003",   # inline exception messages are fine for a small library
    "EM101",    # string literal in exception — same rationale
    "EM102",    # f-string in exception — same rationale
    "TCH001",   # TYPE_CHECKING imports — not worth the churn
    "TCH002",   # TYPE_CHECKING imports (third-party)
    "N817",     # CamelCase imported as acronym — local alias is clear
    "BLE001",   # broad except in runner is intentional for step safety
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG002",   # unused args in step stubs match interface signatures
    "SLF001",   # private member access is expected in tests
    "S101",     # assert is standard in tests
    "FBT002",   # boolean positional args in test helpers are fine
    "PLR2004",  # magic values in assertions are fine
]
"examples/*" = [
    "T201",     # print() is the intended output mechanism in examples
    "SLF001",   # private member access needed to drive runner internals in demo
    "ARG002",   # unused args match interface signatures
    "PLR2004",  # magic values in display formatting are fine
]

[tool.mypy]
python_version = "3.11"
files = ["workchain"]
strict = true

[[tool.mypy.overrides]]
module = ["motor.*", "mongomock_motor.*"]
ignore_missing_imports = true


[tool.hatch.build.targets.wheel]
packages = ["workchain", "workchain_server"]

[tool.hatch.build.targets.wheel.force-include]
"workchain_server/static/app" = "workchain_server/static/app"

[tool.hatch.build.targets.sdist]
exclude = [
    "workchain_server/frontend/node_modules",
    "workchain_server/frontend/dist",
    "workchain_server/static/app",
]
